# gym_reversi

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
gym_reversi/: reversi.py
test/: test_register.py
