[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "gym_reversi"
authors = [
    {name = "Hector Menchaca", email = "hm34306@hotmail.com"},
    {name = "Bo Yang", email = "boy@kth.se"},
]
keywords = ["gym", "OpenAI-gym", "reversi", "othello", "reinforcement-learning"]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License"
]
dependencies = ["numpy==1.26.4", "gymnasium==1.0.0",]

[project.optional-dependencies]
dev = ["ruff==0.8.0"]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/pigooosuke/gym_reversi"
Issues = "https://github.com/pigooosuke/gym_reversi/issues"
